--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -67,13 +67,20 @@ components:
   components:
   - type: DatePicker
     properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
-      placeholder: '', border: '', enabled: true, foreground: '', visible: true, font_size: null,
-      font: '', spacing_above: small, spacing_below: small, italic: false, date: '',
-      min_date: '', background: '', bold: false, underline: false, format: ''}
+      placeholder: Date FROM, border: '', enabled: true, foreground: '', visible: true,
+      font_size: 8, font: '', spacing_above: small, spacing_below: small, italic: false,
+      date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/
+        %m/ %d'}
     name: t_from
     layout_properties: {}
+    data_bindings:
+    - {property: date, code: 'self.item[''from_date'']', writeback: true}
+    event_bindings: {change: t_from_change}
 - type: DatePicker
-  properties: {}
+  properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
+    placeholder: '', border: '', enabled: true, foreground: '', visible: true, font_size: null,
+    font: '', spacing_above: small, spacing_below: small, italic: false, date: '',
+    min_date: '', background: '', bold: false, underline: false, format: '"YYYY/MM/DD"'}
   name: t_to
   layout_properties: {grid_position: 'AXUESG,RIPMES'}
 - type: Label
