--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -1,6 +1,8 @@
 container:
   type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: none, spacing_above: small, col_widths: '{}', spacing_below: small,
+    background: ''}
 components:
 - type: FlowPanel
   properties: {role: null, spacing: medium, align: left, tooltip: '', border: '',
@@ -76,11 +78,10 @@ components:
     - {property: date, code: 'self.item[''from_date'']', writeback: true}
     event_bindings: {change: t_from_change}
 - type: DatePicker
-  properties: {role: null, align: left, max_date: '', pick_time: true, tooltip: '',
+  properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
     placeholder: Date TO, border: '', enabled: true, foreground: '', visible: true,
     font_size: null, font: '', spacing_above: small, spacing_below: small, italic: false,
-    date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d
-      %H:%M'}
+    date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d'}
   name: t_to
   layout_properties: {grid_position: 'AXUESG,RIPMES'}
   data_bindings:
@@ -94,8 +95,27 @@ components:
   name: d_zone
   layout_properties: {grid_position: 'LGBALO,RCTBGY'}
 - type: DropDown
-  properties: {}
+  properties:
+    role: null
+    align: full
+    tooltip: ''
+    placeholder: Select Zone
+    border: ''
+    enabled: true
+    foreground: ''
+    items: ['ALL ', '08:00 - 16:00', '16:00 - 24:00', '00:00 - 08:00']
+    visible: true
+    font_size: null
+    font: ''
+    spacing_above: small
+    spacing_below: small
+    italic: false
+    background: '"white"'
+    bold: false
+    underline: false
+    include_placeholder: false
   name: drop_down_1
   layout_properties: {grid_position: 'GVBMFN,CCDJVX'}
+  data_bindings: []
 is_package: true
 custom_component: true
