--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -6,7 +6,7 @@ container:
   event_bindings: {}
 components:
 - type: FlowPanel
-  properties: {role: null, spacing: small, align: left, tooltip: '', border: '', foreground: '',
+  properties: {role: null, spacing: tiny, align: left, tooltip: '', border: '', foreground: '',
     visible: true, spacing_above: small, spacing_below: small, background: ''}
   name: flow_panel_2
   layout_properties: {grid_position: 'HGFGXB,NWXPOO'}
@@ -44,7 +44,7 @@ components:
     layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
     event_bindings: {clicked: m3_clicked}
 - type: FlowPanel
-  properties: {role: null, spacing: small, align: left, tooltip: '', border: '', foreground: '',
+  properties: {role: null, spacing: tiny, align: left, tooltip: '', border: '', foreground: '',
     visible: true, spacing_above: small, spacing_below: small, background: ''}
   name: flow_panel_1
   layout_properties: {grid_position: 'OSHLVW,WIHBNY'}
