--- a/client_code/imp/form_template.yaml
+++ b/client_code/imp/form_template.yaml
@@ -42,6 +42,12 @@ components:
       underline: false, icon: ''}
     name: label_1
     layout_properties: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: '', font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+    italic: true, background: '', bold: true, underline: false, icon: ''}
+  name: last
+  layout_properties: {grid_position: 'QRQHBW,CFURYJ'}
 - type: Timer
   properties: {}
   name: timer_1
