--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: none, spacing_above: small, col_widths: '{"WIHBNY":25,"LAWTWX":35,"JCQVTI":30,"EYBBTB":30}',
+    wrap_on: mobile, col_spacing: none, spacing_above: small, col_widths: '{"WIHBNY":25,"LAWTWX":35,"JCQVTI":40,"EYBBTB":20}',
     spacing_below: small, background: ''}
   event_bindings: {}
 components:
@@ -136,6 +136,7 @@ components:
   properties: {}
   name: drop_down_2
   layout_properties: {grid_position: 'REPJDC,JFXTWE'}
+  event_bindings: {change: drop_down_2_change}
 - type: Label
   properties: {}
   name: temp
