--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -130,42 +130,42 @@ components:
       layout_properties: {grid_position: 'SLLSPA,TIWABF', full_width_row: false}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-        visible: true, text: 23/12, font_size: 20, font: '', spacing_above: large,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: '', font_size: 20, font: '', spacing_above: large, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: lb_31
       layout_properties: {grid_position: 'PAUJKU,JGVGHQ', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '2', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: small, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: lb_32
       layout_properties: {grid_position: 'PAUJKU,UBEAOY', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '3', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: small, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: lb_33
       layout_properties: {grid_position: 'PAUJKU,ICBJUP', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '4', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: small, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: lb_34
       layout_properties: {grid_position: 'PAUJKU,UZRLFK', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '5', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: small, italic: false, background: '', bold: true, underline: false,
         icon: ''}
       name: lb_35
       layout_properties: {grid_position: 'PAUJKU,EULLWP', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '6', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: none, italic: false, background: '', bold: true, underline: false,
         icon: ''}
       name: lb_36
