--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -88,42 +88,42 @@ components:
       layout_properties: {grid_position: 'XTKGAB,FDPAON'}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-        visible: true, text: 22/12, font_size: 20, font: '', spacing_above: large,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: '', font_size: 20, font: '', spacing_above: large, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: lb_21
       layout_properties: {grid_position: 'SLLSPA,KMZJLR', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '2', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: none, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: lb_22
       layout_properties: {grid_position: 'SLLSPA,GDRUVF', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '3', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: none, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: lb_23
       layout_properties: {grid_position: 'SLLSPA,VKKJKM', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '4', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: none, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: lb_24
       layout_properties: {grid_position: 'SLLSPA,YCOPYM', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '5', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: none, italic: false, background: '', bold: true, underline: false,
         icon: ''}
       name: lb_25
       layout_properties: {grid_position: 'SLLSPA,WEEEPH', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '6', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        visible: true, text: '', font_size: 48, font: '', spacing_above: small, icon_align: left,
         spacing_below: none, italic: false, background: '', bold: true, underline: false,
         icon: ''}
       name: lb_26
